--- a/app/base/templates/login/login.html
+++ b/app/base/templates/login/login.html
@@ -8,7 +8,7 @@
 
 <div class="login-box">
     <div class="login-logo">
-        <a href="https://appseed.us/admin-dashboards/flask-dashboard-adminlte">Flask <b>Admin</b>LTE</a>
+        <a href="#">Hello<b>Scrapper</b></a>
     </div>
 
     <!-- /.login-logo -->
@@ -64,8 +64,6 @@
         <div class="text-center">
             Not a member? <a href={{ url_for('base_blueprint.create_user') }} class="text-center">Register</a>
             <br />
-            <br />
-            <a href="https://appseed.us/admin-dashboards/flask-dashboard-adminlte">Flask <b>Admin</b>LTE</a> - coded by AppSeed.
         </div>
 
     </div>
