--- a/app/base/templates/login/register.html
+++ b/app/base/templates/login/register.html
@@ -9,7 +9,7 @@
 <div class="register-box">
 
     <div class="register-logo">
-        <a href="https://appseed.us/admin-dashboards/flask-dashboard-adminlte">Flask <b>Admin</b>LTE</a>
+        <a href="#">Hello<b>Scrapper</b></a>
     </div>
 
     <div class="register-box-body">
@@ -75,9 +75,6 @@
             <br />
             <div class="text-center">
                 Have an account? <a href={{ url_for('base_blueprint.login') }} class="text-center">Login</a>
-                <br />
-                <br />
-                <a href="https://appseed.us/admin-dashboards/flask-dashboard-adminlte">Flask <b>Admin</b>LTE</a> - coded by AppSeed.
             </div>
 
         {% endif %}
