--- a/app/base/templates/site_template/sidebar.html
+++ b/app/base/templates/site_template/sidebar.html
@@ -31,17 +31,17 @@
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">MAIN NAVIGATION</li>
-        <li class="active treeview">
-          <a href="#">
-            <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+        <li class="active">
+            <a href="index"> <i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
-          </a>
+          
+          <!--
           <ul class="treeview-menu">
             <li class="active"><a href="index"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
             <li><a href="index2"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
-          </ul>
+          </ul>-->
         </li>
         <!-- Layouts - @WIP
         <li class="treeview">
@@ -58,7 +58,7 @@
             <li><a href="/layout-fixed"><i class="fa fa-circle-o"></i> Fixed</a></li>
             <li><a href="/layout-collapsed"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
           </ul>
-        </li> -->
+        </li>
         <li>
           <a href="/page-widgets">
             <i class="fa fa-th"></i> <span>Widgets</span>
@@ -192,7 +192,8 @@
             <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
           </ul>
         </li>
-        <li><a href="https://appseed.us/admin-dashboards/flask-dashboard-adminlte"><i class="fa fa-rocket"></i> <span>Product Info</span></a></li>
+        <li><a href="#"><i class="fa fa-rocket"></i> <span>Product Info</span></a></li>
+        End Comment --> 
         <li class="header"></li>
         <li><a href="/logout"><i class="fa fa-circle-o text-red"></i> <span>Logout</span></a></li>
       </ul>
