--- a/app/base/templates/site_template/navigation.html
+++ b/app/base/templates/site_template/navigation.html
@@ -1,7 +1,7 @@
 
   <header class="main-header">
     <!-- Logo -->
-    <a href="index2.html" class="logo">
+    <a href="/" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><i class="ion ion-funnel"></i></span>
       <!-- logo for regular state and mobile devices -->
@@ -52,7 +52,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <img src="/static/assets/img/user2-160x160.jpg" class="user-image" alt="User Image">
               <span class="hidden-xs">
-                {{ current_user.username }}
+                {{ current_user.username | title }}
               </span>
             </a>
             <ul class="dropdown-menu">
