--- a/app/base/templates/site_template/sidebar.html
+++ b/app/base/templates/site_template/sidebar.html
@@ -10,7 +10,7 @@
         </div>
         <div class="pull-left info">
           <p>
-            {{ current_user.username }}
+            {{ current_user.username | title }}
           </p>
           <a href="/page-profile">
             <i class="fa fa-circle text-success"></i> Online</a>
@@ -36,14 +36,19 @@
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
-          
-          <!--
-          <ul class="treeview-menu">
-            <li class="active"><a href="index"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-            <li><a href="index2"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
-          </ul>-->
         </li>
-        <!-- Layouts - @WIP
+        <li>
+          <a href="/scrape"> <i class="fa fa-flash"></i> <span>Scrape</span></a>
+          <span class="pull-right-container">
+            <i class="fa fa-angle-left pull-right"></i>
+          </span>
+        </li>
+        <li>
+          <a href="/history"> <i class="fa fa-history"></i> <span>History</span></a>
+          <span class="pull-right-container">
+            <i class="fa fa-angle-left pull-right"></i>
+          </span>
+        </li>
         <li class="treeview">
           <a href="#">
             <i class="fa fa-files-o"></i>
@@ -193,7 +198,7 @@
           </ul>
         </li>
         <li><a href="#"><i class="fa fa-rocket"></i> <span>Product Info</span></a></li>
-        End Comment --> 
+        
         <li class="header"></li>
         <li><a href="/logout"><i class="fa fa-circle-o text-red"></i> <span>Logout</span></a></li>
       </ul>
