--- a/app/base/templates/site_template/navigation.html
+++ b/app/base/templates/site_template/navigation.html
@@ -18,34 +18,9 @@
         <ul class="nav navbar-nav">
           <!-- Notifications: style can be found in dropdown.less -->
           <li class="dropdown notifications-menu">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <a href="/how-to" class="dropdown-toggle">
               <i class="fa fa-question-circle-o"></i>
-              <span class="label label-warning">3</span>
             </a>
-            <ul class="dropdown-menu">
-              <li class="header">How to use this app</li>
-              <li>
-                <!-- inner menu: contains the actual data -->
-                <ul class="menu">
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-users text-aqua"></i> How to add user
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-warning text-green"></i> How to create new scrape
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-link text-red"></i> How to add new path
-                    </a>
-                  </li>
-                </ul>
-              </li>
-              <li class="footer"><a href="#">View all</a></li>
-            </ul>
           </li>
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
