--- a/app/base/templates/site_template/sidebar.html
+++ b/app/base/templates/site_template/sidebar.html
@@ -49,6 +49,25 @@
             <i class="fa fa-angle-left pull-right"></i>
           </span>
         </li>
+        <li>
+          <a href="/users"> <i class="fa fa-users"></i> <span>Users</span></a>
+          <span class="pull-right-container">
+            <i class="fa fa-angle-left pull-right"></i>
+          </span>
+        </li>
+        <li>
+          <a href="/analysis"> <i class="fa fa-signal"></i> <span>Analysis</span></a>
+          <span class="pull-right-container">
+            <i class="fa fa-angle-left pull-right"></i>
+          </span>
+        </li>
+        <li>
+          <a href="/xpath"> <i class="fa fa-gear"></i> <span>Xpath</span></a>
+          <span class="pull-right-container">
+            <i class="fa fa-angle-left pull-right"></i>
+          </span>
+        </li>
+        <!--
         <li class="treeview">
           <a href="#">
             <i class="fa fa-files-o"></i>
@@ -198,7 +217,7 @@
           </ul>
         </li>
         <li><a href="#"><i class="fa fa-rocket"></i> <span>Product Info</span></a></li>
-        
+        -->
         <li class="header"></li>
         <li><a href="/logout"><i class="fa fa-circle-o text-red"></i> <span>Logout</span></a></li>
       </ul>
