--- a/app/home/templates/detail-scrape.html
+++ b/app/home/templates/detail-scrape.html
@@ -29,7 +29,14 @@
 
       <div class="box">
         <div class="box-header">
-          <h3 class="box-title">Detail Scrape</h3>
+          <h3 class="box-title">Scraper by Dimas On 2020-02-20 With Title Request by PM</h3>
+          <div class="box-tools">
+            <div class="btn-group">
+              <button type="button" class="btn btn-default"><i class="fa fa-file-pdf-o"></i></button>
+              <button type="button" class="btn btn-default"><i class="fa fa-file-text-o"></i></button>
+              <button type="button" class="btn btn-default"><i class="fa fa-file-excel-o"></i></button>
+            </div>
+          </div>
         </div>
         <!-- /.box-header -->
         <div class="box-body">
