--- a/app/home/templates/analysis.html
+++ b/app/home/templates/analysis.html
@@ -24,23 +24,164 @@
 <section class="content">
 
   <div class="row">
-    <div class="col-md-8">
-      <!-- Default box -->
+    <div class="col-md-12">
       <div class="box">
         <div class="box-header with-border">
-          <h3 class="box-title">Price Range Analysis</h3>
+          <h3 class="box-title">Analysis</h3>
         </div>
-        <div class="box-body">
-          <div class="chart">
-            <canvas id="lineChart" style="height:250px"></canvas>
+        <div class="box-header with-border box-search">
+          <div class="col-xs-2">
+            <!-- select -->
+            <div class="form-group">
+              <select class="form-control">
+                <option>Select City</option>
+                <option>D.I Yogyakarta</option>
+                <option>Jakarta</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-xs-2">
+            <!-- select -->
+            <div class="form-group">
+              <select class="form-control">
+                <option>Select Brand</option>
+                <option>Asus</option>
+                <option>Acer</option>
+                <option>Lenovo</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-xs-2">
+            <!-- select -->
+            <div class="form-group">
+              <select class="form-control">
+                <option>Select Processor</option>
+                <option>Dual Core</option>
+                <option>Quad Core</option>
+                <option>Core i3</option>
+                <option>Core i5</option>
+                <option>Core i7</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-xs-2">
+            <!-- select -->
+            <div class="form-group">
+              <select class="form-control">
+                <option>Select RAM</option>
+                <option>DDR3 2GB</option>
+                <option>DDR3 4GB</option>
+                <option>DDR3 8GB</option>
+                <option>DDR3 16GB</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-xs-2">
+            <!-- select -->
+            <div class="form-group">
+              <select class="form-control">
+                <option>Select Storage</option>
+                <option>HDD 500GB</option>
+                <option>HDD 1TB</option>
+                <option>SSD 256GB</option>
+                <option>SSD 512GB</option>
+                <option>SSD 1TB</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-xs-2">
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> Search</button>
+            </div>
           </div>
         </div>
-        <!-- /.box-body -->
+        <div class="box-body">
+          <div class="row">
+            <div class="col-md-8">
+              <p class="text-center"><strong>Price Range Analysis</strong></p>
+              <div class="chart">
+                <canvas id="lineChart" style="height:350px"></canvas>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <p class="text-center"><strong>Favorite Product</strong></p>
+              <ul class="products-list product-list-in-box">
+                <!-- start item -->
+                <li class="item">
+                  <div class="product-img">
+                    <img src="/static/assets/img/asus-laptop.jpg" alt="Product Image" width="50">
+                  </div>
+                  <div class="product-info">
+                    <a href="javascript:void(0)" class="product-title">Lenovo Idea Pad Ram 4GB
+                      <span class="label label-warning pull-right">Rp. 8.789.200</span></a>
+                    <span class="product-description">
+                      Have 90 Reviews
+                    </span>
+                  </div>
+                </li>
+                <!-- end item -->
+                <!-- start item -->
+                <li class="item">
+                  <div class="product-img">
+                    <img src="/static/assets/img/asus-laptop.jpg" alt="Product Image" width="50">
+                  </div>
+                  <div class="product-info">
+                    <a href="javascript:void(0)" class="product-title">MacBook Pro Retina Ram 8GB
+                      <span class="label label-warning pull-right">Rp. 10.200.000</span></a>
+                    <span class="product-description">
+                      Have 87 Reviews
+                    </span>
+                  </div>
+                </li>
+                <!-- end item -->
+                <!-- start item -->
+                <li class="item">
+                  <div class="product-img">
+                    <img src="/static/assets/img/asus-laptop.jpg" alt="Product Image" width="50">
+                  </div>
+                  <div class="product-info">
+                    <a href="javascript:void(0)" class="product-title">MacBook Pro Retina Ram 8GB
+                      <span class="label label-warning pull-right">Rp. 10.200.000</span></a>
+                    <span class="product-description">
+                      Have 87 Reviews
+                    </span>
+                  </div>
+                </li>
+                <!-- end item -->
+                <!-- start item -->
+                <li class="item">
+                  <div class="product-img">
+                    <img src="/static/assets/img/asus-laptop.jpg" alt="Product Image" width="50">
+                  </div>
+                  <div class="product-info">
+                    <a href="javascript:void(0)" class="product-title">MacBook Pro Retina Ram 8GB
+                      <span class="label label-warning pull-right">Rp. 10.200.000</span></a>
+                    <span class="product-description">
+                      Have 87 Reviews
+                    </span>
+                  </div>
+                </li>
+                <!-- end item -->
+                <!-- start item -->
+                <li class="item">
+                  <div class="product-img">
+                    <img src="/static/assets/img/asus-laptop.jpg" alt="Product Image" width="50">
+                  </div>
+                  <div class="product-info">
+                    <a href="javascript:void(0)" class="product-title">MacBook Pro Retina Ram 8GB
+                      <span class="label label-warning pull-right">Rp. 10.200.000</span></a>
+                    <span class="product-description">
+                      Have 87 Reviews
+                    </span>
+                  </div>
+                </li>
+                <!-- end item -->
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
-      <!-- /.box -->
-
     </div>
-  </div>
 
 </section>
 <!-- /.content -->
@@ -51,7 +192,7 @@
 <!-- Specific JS goes HERE -->
 <script src="/static/assets/js/chart.js"></script>
 <script>
-  $(function(){
+  $(function () {
 
     /* ChartJS
      * -------
@@ -63,76 +204,86 @@
     //--------------
 
     var areaChartData = {
-      labels  : ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
+      labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
       datasets: [
         {
-          label               : 'Electronics',
-          fillColor           : 'rgba(210, 214, 222, 1)',
-          strokeColor         : 'rgba(210, 214, 222, 1)',
-          pointColor          : 'rgba(210, 214, 222, 1)',
-          pointStrokeColor    : '#c1c7d1',
-          pointHighlightFill  : '#fff',
-          pointHighlightStroke: 'rgba(220,220,220,1)',
-          data                : [65, 59, 80, 81, 56, 55, 40]
+          label: 'Max Price',
+          fillColor: 'rgba(96,92,168,0.9)',
+          strokeColor: 'rgba(96,92,168,0.8)',
+          pointColor: '#605ca8',
+          pointStrokeColor: 'rgba(96,92,168,1)',
+          pointHighlightFill: '#fff',
+          pointHighlightStroke: 'rgba(96,92,168,1)',
+          data: [6500000, 5000000, 8000000, 8500000, 6600000, 5500000, 10000000]
         },
         {
-          label               : 'Digital Goods',
-          fillColor           : 'rgba(60,141,188,0.9)',
-          strokeColor         : 'rgba(60,141,188,0.8)',
-          pointColor          : '#3b8bba',
-          pointStrokeColor    : 'rgba(60,141,188,1)',
-          pointHighlightFill  : '#fff',
-          pointHighlightStroke: 'rgba(60,141,188,1)',
-          data                : [28, 48, 40, 19, 86, 27, 90]
+          label: 'Median Price',
+          fillColor: 'rgba(0,166,90,0.9)',
+          strokeColor: 'rgba(0,166,90,0.8)',
+          pointColor: '#00a65a',
+          pointStrokeColor: 'rgba(0,166,90,1)',
+          pointHighlightFill: '#fff',
+          pointHighlightStroke: 'rgba(0,166,90,1)',
+          data: [3800000, 4800000, 4000000, 6500000, 8600000, 3700000, 5000000]
+        },
+        {
+          label: 'Min Price',
+          fillColor: 'rgba(221,75,57,0.9)',
+          strokeColor: 'rgba(221,75,57,0.8)',
+          pointColor: '#dd4b39',
+          pointStrokeColor: 'rgba(221,75,57,1)',
+          pointHighlightFill: '#fff',
+          pointHighlightStroke: 'rgba(221,75,57,1)',
+          data: [1800000, 2800000, 4000000, 1900000, 7600000, 2700000, 1500000]
         }
       ]
-    } 
+    }
 
     var areaChartOptions = {
       //Boolean - If we should show the scale at all
-      showScale               : true,
+      showScale: true,
       //Boolean - Whether grid lines are shown across the chart
-      scaleShowGridLines      : false,
+      scaleShowGridLines: false,
       //String - Colour of the grid lines
-      scaleGridLineColor      : 'rgba(0,0,0,.05)',
+      scaleGridLineColor: 'rgba(0,0,0,.05)',
       //Number - Width of the grid lines
-      scaleGridLineWidth      : 1,
+      scaleGridLineWidth: 1,
       //Boolean - Whether to show horizontal lines (except X axis)
       scaleShowHorizontalLines: true,
       //Boolean - Whether to show vertical lines (except Y axis)
-      scaleShowVerticalLines  : true,
+      scaleShowVerticalLines: true,
       //Boolean - Whether the line is curved between points
-      bezierCurve             : true,
+      bezierCurve: true,
       //Number - Tension of the bezier curve between points
-      bezierCurveTension      : 0.3,
+      bezierCurveTension: 0.3,
       //Boolean - Whether to show a dot for each point
-      pointDot                : false,
+      pointDot: false,
       //Number - Radius of each point dot in pixels
-      pointDotRadius          : 4,
+      pointDotRadius: 4,
       //Number - Pixel width of point dot stroke
-      pointDotStrokeWidth     : 1,
+      pointDotStrokeWidth: 1,
       //Number - amount extra to add to the radius to cater for hit detection outside the drawn point
-      pointHitDetectionRadius : 20,
+      pointHitDetectionRadius: 20,
       //Boolean - Whether to show a stroke for datasets
-      datasetStroke           : true,
+      datasetStroke: true,
       //Number - Pixel width of dataset stroke
-      datasetStrokeWidth      : 2,
+      datasetStrokeWidth: 2,
       //Boolean - Whether to fill the dataset with a color
-      datasetFill             : true,
+      datasetFill: true,
       //String - A legend template
-      legendTemplate          : 'Dummy',
+      legendTemplate: 'Dummy',
       //Boolean - whether to maintain the starting aspect ratio or not when responsive, if set to false, will take up entire container
-      maintainAspectRatio     : true,
+      maintainAspectRatio: true,
       //Boolean - whether to make the chart responsive to window resizing
-      responsive              : true
+      responsive: true
     }
 
     //-------------
     //- LINE CHART -
     //--------------
-    var lineChartCanvas          = $('#lineChart').get(0).getContext('2d')
-    var lineChart                = new Chart(lineChartCanvas)
-    var lineChartOptions         = areaChartOptions
+    var lineChartCanvas = $('#lineChart').get(0).getContext('2d')
+    var lineChart = new Chart(lineChartCanvas)
+    var lineChartOptions = areaChartOptions
     lineChartOptions.datasetFill = false
     lineChart.Line(areaChartData, lineChartOptions)
   })
