--- a/app/base/templates/site_template/sidebar.html
+++ b/app/base/templates/site_template/sidebar.html
@@ -67,6 +67,9 @@
             <i class="fa fa-angle-left pull-right"></i>
           </span>
         </li>
+        <!-- Add new sidebar bellow -->
+
+        <!-- End new sidebar bellow -->
         <!--
         <li class="treeview">
           <a href="#">
