--- a/app/home/templates/page-blank.html
+++ b/app/home/templates/page-blank.html
@@ -11,13 +11,13 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Blank page
-        <small>it all starts here</small>
+        Blank page <!-- Change This Line -->
+        <small>it all starts here <!-- Change This Line --></small>
       </h1>
       <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a href="#">Examples</a></li>
-        <li class="active">Blank page</li>
+        <li><a href="#">Examples <!-- Change This Line --></a></li>
+        <li class="active">Blank page <!-- Change This Line --></li>
       </ol>
     </section>
 
@@ -27,7 +27,7 @@
       <!-- Default box -->
       <div class="box">
         <div class="box-header with-border">
-          <h3 class="box-title">Title</h3>
+          <h3 class="box-title">Title <!-- Change This Line --></h3>
 
           <div class="box-tools pull-right">
             <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
@@ -38,11 +38,11 @@
           </div>
         </div>
         <div class="box-body">
-          Start creating your amazing application!
+          You new page content place here! <!-- Change This Line -->
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
-          Footer
+          Footer <!-- Change This Line -->
         </div>
         <!-- /.box-footer-->
       </div>
